<resources>
    <string name="app_name">Anime</string>
    <string name="anime_name">Anime Name</string>
    <string name="anime_name_japanese">Anime Name Japanese</string>
    <string name="status">Status</string>
    <string name="episodes">Episodes</string>
    <string name="aired">Aired</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="score">Score</string>
    <string name="rank">Rank</string>
    <string name="popularity">Popularity</string>
    <string name="synopsis">Synopsis</string>
</resources>